# me

./: .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  NOTES.md  README.md  local.yml  manage.py  production.yml  pyproject.toml  setup.cfg
compose/production/traefik/: traefik.yml
config/: api_router.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
me/: conftest.py
me/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
me/templates/: base.html
me/users/: adapters.py  admin.py  apps.py  models.py  urls.py
me/users/migrations/: 0002_auto_20220503_1322.py
me/users/tests/: test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
requirements/: base.txt  local.txt  production.txt
