[tool.poetry]
name = "me"
version = "0.1.0"
description = "It is all I need to cover my needs"
authors = ["Patrick <patryk.foryszewski@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "3.2.13"
django-environ = "0.8.1"
django-model-utils = "4.2.0"
django-allauth = "0.50.0"
django-crispy-forms = "1.14.0"
crispy-bootstrap5 = "0.6"
django-compressor = "3.1"
django-redis = "5.2.0"
djangorestframework = "3.13.1"
django-cors-headers = "3.11.0"
drf-spectacular = "0.22.0"
gunicorn = "20.1.0"
psycopg2-binary= "2.9.3"
sentry-sdk = "1.5.10"
django-anymail = "8.5"
celery = "^5.2.6"

[tool.poetry.dev-dependencies]
ipdb = "0.13.9"
psycopg2-binary= "2.9.3"
watchgod = "0.8.2"
mypy = "0.942"
django-stubs = "1.9.0"
pytest = "7.2.1"
pytest-sugar = "0.9.4"
djangorestframework-stubs = "1.4.0"
sphinx = "4.5.0"
sphinx-autobuild = "2021.3.14"
flake8 = "4.0.1"
flake8-isort = "4.1.1"
coverage = "6.3.2"
black = "22.3.0"
pylint-django = "2.5.3"
pylint-celery = "0.3"
pre-commit = "2.18.1"
factory-boy = "3.2.1"
django-debug-toolbar = "3.2.4"
django-extensions = "3.1.5"
django-coverage-plugin = "2.0.2"
pytest-django = "4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
